--- a/templates/docker.yml.j2
+++ b/templates/docker.yml.j2
@@ -1,38 +1,32 @@
-{% from '_common.j2' import with_defaults %}
-{% set _defaults_ctx = namespace(security=None, catalog=None) %}
-{% call(defaults, catalog) with_defaults(service_security, secrets) %}
-  {% set _defaults_ctx.security = defaults %}
-  {% set _defaults_ctx.catalog = catalog %}
+{% from '_common.j2' import service_context %}
+{% set _ctx = namespace(security=None, secrets=None, mounts=None) %}
+{% call(security_defaults, secret_context, mount_context) service_context(service_security, secrets, mounts) %}
+  {% set _ctx.security = security_defaults %}
+  {% set _ctx.secrets = secret_context %}
+  {% set _ctx.mounts = mount_context %}
 {% endcall %}
-{%- set shma_security_defaults = _defaults_ctx.security %}
-{%- set shma_secret_catalog = _defaults_ctx.catalog %}
-{%- set mounts_config = mounts | default({}) %}
-{%- set ephemeral_mounts = mounts_config.ephemeral_mounts | default([]) %}
-{%- set default_apply_targets = ['docker', 'podman', 'kubernetes', 'proxmox', 'baremetal'] %}
-{%- set security = service_security | default({}) %}
-{%- set default_run_user = security.run_as_user if security.run_as_user is defined else 65532 %}
-{%- set default_run_group = security.run_as_group if security.run_as_group is defined else default_run_user %}
-{%- set compose_user_default = security.user if security.user is defined else ((default_run_user | string) ~ ':' ~ (default_run_group | string)) %}
-{%- set read_only_root = security.read_only_root_filesystem if security.read_only_root_filesystem is defined else true %}
-{%- set drop_caps_default = security.capabilities_drop | default(['ALL']) %}
-{%- if drop_caps_default is string %}{%- set drop_caps_default = [drop_caps_default] %}{%- endif %}
-{%- set no_new_privs = security.no_new_privileges if security.no_new_privileges is defined else true %}
-{%- set default_apparmor = security.apparmor_profile if security.apparmor_profile is defined else 'docker-default' %}
-{%- set allowed_apparmor_profiles = security.allowed_apparmor_profiles if security.allowed_apparmor_profiles is defined else ['docker-default', 'unconfined'] %}
-{%- if allowed_apparmor_profiles is string %}{%- set allowed_apparmor_profiles = [allowed_apparmor_profiles] %}{%- endif %}
+{%- set shma_security_defaults = _ctx.security %}
+{%- set shma_secret_context = _ctx.secrets %}
+{%- set shma_secret_catalog = shma_secret_context.catalog %}
+{%- set docker_ephemeral_mounts = _ctx.mounts.ephemeral | select_ephemeral_mounts('docker') %}
+{%- set default_run_user = shma_security_defaults.run_user %}
+{%- set default_run_group = shma_security_defaults.run_group %}
+{%- set compose_user_default = shma_security_defaults.compose_user if shma_security_defaults.compose_user is not none else ((default_run_user | string) ~ ':' ~ (default_run_group | string)) %}
+{%- set read_only_root = shma_security_defaults.read_only_root %}
+{%- set drop_caps_default = shma_security_defaults.capabilities_drop %}
+{%- set no_new_privs = shma_security_defaults.no_new_privileges %}
+{%- set default_apparmor = shma_security_defaults.apparmor_profile %}
+{%- set allowed_apparmor_profiles = shma_security_defaults.allowed_apparmor_profiles %}
 {%- set defined_secret_env_names = shma_secret_catalog.env_names | default([]) %}
 {%- set defined_file_secret_names = shma_secret_catalog.file_names | default([]) %}
 {%- set docker_tmpfs = namespace(items=[]) %}
-{%- for mount in ephemeral_mounts %}
-  {%- set apply_targets = mount.apply_to | default(default_apply_targets) %}
-  {%- if 'docker' in apply_targets %}
-    {%- set options = [] %}
-    {%- if mount.size is defined %}{%- set _ = options.append('size=' ~ mount.size) %}{%- endif %}
-    {%- if mount.mode is defined %}{%- set _ = options.append('mode=' ~ mount.mode) %}{%- endif %}
-    {%- set entry = mount.path %}
-    {%- if options %}{%- set entry = entry ~ ':' ~ options | join(',') %}{%- endif %}
-    {%- if entry not in docker_tmpfs.items %}{%- set _ = docker_tmpfs.items.append(entry) %}{%- endif %}
-  {%- endif %}
+{%- for mount in docker_ephemeral_mounts %}
+  {%- set options = [] %}
+  {%- if mount.size is not none %}{%- set _ = options.append('size=' ~ mount.size) %}{%- endif %}
+  {%- if mount.mode is not none %}{%- set _ = options.append('mode=' ~ mount.mode) %}{%- endif %}
+  {%- set entry = mount.path %}
+  {%- if options %}{%- set entry = entry ~ ':' ~ options | join(',') %}{%- endif %}
+  {%- if entry not in docker_tmpfs.items %}{%- set _ = docker_tmpfs.items.append(entry) %}{%- endif %}
 {%- endfor %}
 {% set services_list = services | default([{ 
   'name': service_name | default(service_id),
@@ -46,9 +40,9 @@
 {% set resources = service_resources | default({}) %}
 {% set connections_per_second = resources.connections_per_second if resources.connections_per_second is defined else None %}
 {% set primary_service_name = service_name | default(service_id) %}
-{% set secret_env = secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] %}
-{% set file_secrets = secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] %}
-{% set rotation_timestamp = secrets.rotation_timestamp if secrets is defined and secrets.rotation_timestamp is not none else None %}
+{% set secret_env = shma_secret_context.env %}
+{% set file_secrets = shma_secret_context.files %}
+{% set rotation_timestamp = shma_secret_context.rotation_timestamp %}
 {% set docker_defaults = {
   'compose_user_default': compose_user_default,
   'read_only_root': read_only_root,
@@ -62,7 +56,7 @@
   'connections_per_second': connections_per_second,
   'primary_service_name': primary_service_name,
   'rotation_timestamp': rotation_timestamp,
-  'default_init': security.init if security.init is defined else None
+  'default_init': shma_security_defaults.init,
 } %}
 {% set prepared_services = services_list | docker_compose_prepare_services(docker_defaults) %}
 services:
