--- a/templates/proxmox.yml.j2
+++ b/templates/proxmox.yml.j2
@@ -1,21 +1,21 @@
 ---
+{% from '_common.j2' import service_context %}
+{% set _ctx = namespace(mounts=None) %}
+{% call(_, _, mount_context) service_context(service_security, secrets, mounts) %}
+  {% set _ctx.mounts = mount_context %}
+{% endcall %}
 {% set container = service_container | default({}) %}
 {% set pkg_list = service_packages | default([]) %}
 {% set file_list = service_files | default([]) %}
 {% set svc_list = service_services | default([]) %}
 {% set cmd_list = service_commands | default([]) %}
-{% set mounts_config = mounts | default({}) %}
-{% set ephemeral_mounts = mounts_config.ephemeral_mounts | default([]) %}
-{% set default_apply_targets = ['docker', 'podman', 'kubernetes', 'proxmox', 'baremetal'] %}
+{% set proxmox_mounts = _ctx.mounts.ephemeral | select_ephemeral_mounts('proxmox') %}
 {% set proxmox_tmpfs = namespace(items=[]) %}
-{% for mount in ephemeral_mounts %}
-  {% set apply_targets = mount.apply_to | default(default_apply_targets) %}
-  {% if 'proxmox' in apply_targets %}
-    {% set options = [] %}
-    {% if mount.mode is defined %}{% set _ = options.append('mode=' ~ mount.mode) %}{% endif %}
-    {% if mount.size is defined %}{% set _ = options.append('size=' ~ mount.size) %}{% endif %}
-    {% set _ = proxmox_tmpfs.items.append({'path': mount.path, 'options': options}) %}
-  {% endif %}
+{% for mount in proxmox_mounts %}
+  {% set options = [] %}
+  {% if mount.mode is not none %}{% set _ = options.append('mode=' ~ mount.mode) %}{% endif %}
+  {% if mount.size is not none %}{% set _ = options.append('size=' ~ mount.size) %}{% endif %}
+  {% set _ = proxmox_tmpfs.items.append({'path': mount.path, 'options': options}) %}
 {% endfor %}
 {% set pkg_names = namespace(items=[]) %}
 {% for pkg in pkg_list %}
